# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\TaskController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -20,9 +21,15 @@ Route::middleware(['auth:sanctum'])->group(function (): void {
 Route::apiResource('tasks', TaskController::class)->only(['index', 'store']);
 
 Route::prefix('auth')->group(function (): void {
-    Route::post('/login', [AuthController::class, 'login']);
-    Route::post('/logout', [AuthController::class, 'logout']);
-    Route::post('/register', [AuthController::class, 'register']);
-    Route::post('/refresh', [AuthController::class, 'refresh']);
-    Route::middleware('auth:api')->get('/me', [AuthController::class, 'me']);
+    Route::post('login', [AuthController::class, 'login']);
+    Route::post('logout', [AuthController::class, 'logout']);
+    Route::post('register', [AuthController::class, 'register']);
+    Route::post('refresh', [AuthController::class, 'refresh']);
+    Route::middleware(['auth:api'])->group(function () {
+        Route::get('me', [AuthController::class, 'me']);
+    });
 });
+
+//Route::middleware('auth:api')->group(function () {
+    Route::apiResource('projects', ProjectController::class);
+//});
